--- a/test/tainted/Makefile
+++ b/test/tainted/Makefile
@@ -13,4 +13,6 @@ tainted:
 	-${SPLINT} -mts tainted tainted5.c -mustfree -exportlocal
 	-${SPLINT} -mts tainted taintedmerge.c -mustfree -exportlocal -expect 3
 	-${SPLINT} -mts tainted taintedimplicit.c -mustfree -exportlocal -expect 1
-	-${SPLINT} -mts tainted sprintf.c -expect 2
+	-${SPLINT} -mts tainted sprintf.c -expect 5
+	
+# evans 2002-07-09: 3 more warnings for sprintf because of sprintf
