Fixed bug cause spurious bounds errors. Made +orconstraint the default Also small bug fix in code reading in splint libraries
The bug was that
code like:
int a[12];
for (i = 0; i < 12; i++)
  a[i] = 0;

  would be marked as a potential bounds error.

--- a/Makefile.am
+++ b/Makefile.am
@@ -29,7 +29,7 @@
 AUTOMAKE_OPTIONS = 1.5 foreign
 
 binaryfixscript = ./fixBinaryDist.sh
-SUBDIRS =   lib imports test doc src
+SUBDIRS =   src lib imports test doc
 
 binaryDir = bin
 binaryDirFiles =  $(binaryDir)/Makefile.am $(binaryDir)/Makefile.in
