--- a/Makefile.in
+++ b/Makefile.in
@@ -88,7 +88,7 @@ install_sh = @install_sh@
 AUTOMAKE_OPTIONS = 1.5 foreign
 
 binaryfixscript = ./fixBinaryDist.sh
-SUBDIRS = lib imports test doc src
+SUBDIRS = src lib imports test doc
 
 binaryDir = bin
 binaryDirFiles = $(binaryDir)/Makefile.am $(binaryDir)/Makefile.in
