--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -82,6 +82,7 @@ MV = @MV@
 OBJEXT = @OBJEXT@
 PACKAGE = @PACKAGE@
 RM = @RM@
+SED = @SED@
 VERSION = @VERSION@
 am__include = @am__include@
 am__quote = @am__quote@
