--- a/imports/Makefile.in
+++ b/imports/Makefile.in
@@ -80,6 +80,7 @@ MV = @MV@
 OBJEXT = @OBJEXT@
 PACKAGE = @PACKAGE@
 RM = @RM@
+SED = @SED@
 VERSION = @VERSION@
 am__include = @am__include@
 am__quote = @am__quote@
